--- a/questionnaire.html
+++ b/questionnaire.html
@@ -14,7 +14,7 @@
 <div class='container'>
     <p class='title' width='100%' height=180px>
         <img src='image/wenjuandiaocha@2x.png' alt='logo' width='100%' height=180>
-    <p align="center" style="position: relative;top: -125px;font-size: 30px;">CA Technologies有奖调查问卷</p>
+    <p align="center" style="position: relative;top: -125px;font-size: 30px;font-family: 'AdobeSongStd-Light'">CA Technologies有奖调查问卷</p>
 </div>
 <form method='post' onsubmit="return false" id='reg_form' name='reg_form'>
     <div class="user-info" style="width: 290px"><label style="display: inline-block">姓名</label><input id="in1" type='text' name='name'
@@ -61,7 +61,7 @@
         </div>
         <div style="display: block;position: relative;margin-bottom: 10px;"><input id="y2" class="check" type="checkbox" value=""
                                            style="display: inline-block ;width: 20px;height: 20px"/><label for='y2'><span
-                class="ttt">API安全管理</span></label>
+                class="ttt"><span style='font-family: "AdobeSongStd-Light"'>API</span>安全管理</span></label>
         </div>
         <div style="display: block;position: relative;margin-bottom: 10px;"><input id="y3" class="check" type="checkbox" value=""
                                            style="display: inline-block ;width: 20px;height: 20px"/><label for='y3'><span
@@ -95,14 +95,14 @@
             <li value="C">C.尚未得到业务部门的支持</li>
         </ul>
     </div>
-    <div class="title">5.您目前正在着眼解决什么具体的IT问题？</div>
+    <div class="title">5.您目前正在着眼解决什么具体的<span style='font-family: "AdobeSongStd-Light"'>IT</span>问题？</div>
     <input type="text" id="five" style="width: 680px">
     <div class="title">6.我们可以通过何种方式帮您解决这些问题？</div>
     <div class='dropdown'>
         <button><span></span><span class='caret'></span></button>
         <input type='text' name='six'>
         <ul class='form-select select_type select_company_type'>
-            <li value="A">A.发给我CA Technologies解决方案的相关信息</li>
+            <li value="A">A.发给我<span style='font-family: "AdobeSongStd-Light"'>CA Technologies</span>解决方案的相关信息</span></li>
             <li value="B">B.联系我并安排一次技术交流</li>
         </ul>
     </div>
