--- a/questionnaire.html
+++ b/questionnaire.html
@@ -82,7 +82,7 @@
         <div style="display: block;position: relative;"><input id="y7" class="check" type="checkbox" value=""
                                            style="display: inline-block ;width: 20px;height: 20px"/><label for='y7'><span
                 class="ttt">其他</span></label>
-            <input id="question_qita" type="text" style="display: inline-block ;width: 510px;vertical-align: top;">
+            <input id="question_qita" type="text" style="display: inline-block ;vertical-align: top;">
         </div>
     </div>
     <div class="title">4.这个项目是否已经获得预算支持？</div>
@@ -143,7 +143,7 @@ document.addEventListener("touchmove",function(e){
     }
     function checkEmail()//验证邮箱
     {
-        var email = reg_form.email.value;
+        var email = trim(reg_form.email.value);
         var objExp = new RegExp(/^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})+$/);
         if (objExp.test(email) == false)
             return "邮箱格式有误";
@@ -153,7 +153,7 @@ document.addEventListener("touchmove",function(e){
     }
     function checkTel()//验证手机号
     {
-        var tel = reg_form.phone.value;
+        var tel = trim(reg_form.phone.value);
 
         var objExp = new RegExp(/^1[34578]{1}\d{9}$/);
         if (objExp.test(tel) == false) {
@@ -163,11 +163,11 @@ document.addEventListener("touchmove",function(e){
             return true;
     }
     $('#reg_submit').on('click', function () {
-        var name = reg_form.name.value;
-        var job = reg_form.site.value;
-        var email = reg_form.email.value;
-        var company = reg_form.company.value;
-        var phone = reg_form.phone.value;
+        var name = trim(reg_form.name.value);
+        var job = trim(reg_form.site.value);  
+        var email = trim(reg_form.email.value);
+        var company = trim(reg_form.company.value);
+        var phone = trim(reg_form.phone.value);
         var one = reg_form.one.value;
         var two = reg_form.two.value;
         var four = reg_form.four.value;
@@ -220,7 +220,7 @@ document.addEventListener("touchmove",function(e){
                         "question3_4=" + c4 + "&" +
                         "question3_5=" + c5 + "&" +
                         "question3_6=" + c6 + "&" +
-                        "question3_7=" + c7 + question_qita + "&" +
+                        "question3_7=" question_qita + "&" +
                         "question4=" + four + "&" +
                         "question5=" + five + "&" +
                         "question6=" + six + "&" +
