--- a/questionnaire.html
+++ b/questionnaire.html
@@ -220,7 +220,7 @@ document.addEventListener("touchmove",function(e){
                         "question3_4=" + c4 + "&" +
                         "question3_5=" + c5 + "&" +
                         "question3_6=" + c6 + "&" +
-                        "question3_7=" question_qita + "&" +
+                        "question3_7="+ question_qita + "&" +
                         "question4=" + four + "&" +
                         "question5=" + five + "&" +
                         "question6=" + six + "&" +
