--- a/questionnaire.html
+++ b/questionnaire.html
@@ -208,7 +208,13 @@ document.addEventListener("touchmove",function(e){
             var check1 = checkEmail($("input[name='email']").val());
             var check2 = checkTel($("input[name='phone']").val());
             if (check1 === true && check2 === true && c != "0000000") {
-                var hasc7 = c7===0?c7:'';
+                c1 = c1==0?'否':'是';
+                c2 = c2==0?'否':'是';
+                c3 = c3==0?'否':'是';
+                c4 = c4==0?'否':'是';
+                c5 = c5==0?'否':'是';
+                c6 = c6==0?'否':'是';
+                c7 = question_qita==''?'其他':'';
                 var data = "name=" + name + "&job=" + job + "&company=" + company +
                         "&phone=" + phone + "&" +
                         "email=" + email + "&" +
@@ -220,7 +226,7 @@ document.addEventListener("touchmove",function(e){
                         "question3_4=" + c4 + "&" +
                         "question3_5=" + c5 + "&" +
                         "question3_6=" + c6 + "&" +
-                        "question3_7="+ hasc7+question_qita + "&" +
+                        "question3_7="+ c7+question_qita + "&" +
                         "question4=" + four + "&" +
                         "question5=" + five + "&" +
                         "question6=" + six + "&" +
